src/test/ui/fn/fn-fat-arrow-return.stderr
error: return types are denoted using `->`
  --> $DIR/fn-fat-arrow-return.rs:3:8
   |
LL | fn a() => usize { 0 }
   |        ^^ help: use `->` instead

error: aborting due to previous error

